# plaster

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  daynight.py  install.sh  main.py  plaster-launch.sh  pyproject.toml  requirements.txt  resolver.py  seasons.py  utils.py
assets/: plaster.json
plaster/: config.py  daynight.py  geolocation.py  log_management.py  main.py  plaster-launch.sh  resolver.py  special_days.py  tray_satellite.py  utils.py
